--- a/VendingMachine/VendingMachine.csproj
+++ b/VendingMachine/VendingMachine.csproj
@@ -58,7 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Function.cs" />
+    <Compile Include="ViewModels\ProductItemResult.cs" />
+    <Compile Include="Money.cs" />
+    <Compile Include="Vend.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Products.cs" />
     <Compile Include="Program.cs" />
